--- a/index.css
+++ b/index.css
@@ -1,6 +1,115 @@
 main {
-  text-align: center;
+
   font-family: "museo-sans",sans-serif;
   font-size: 56px;
+
 }
 
+h1{
+  margin: 0 auto;
+}
+
+.header{
+  width: calc(100vw - 2rem);
+  z-index: 1;
+  position: fixed;
+  pointer-events: none;
+}
+.header-inner{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+
+}
+.header-name{
+  padding: 32px;
+  padding: 2rem;
+  display: inline-block;
+
+  width: 96px;
+  width: 6rem;
+}
+.header-side{
+ display: inline-block;
+ white-space: nowrap;
+ font-size: 96px;
+ font-size: 6rem;
+ text-transform: uppercase;
+}
+
+.header-left{
+ line-height: .84em;
+/* -webkit-transform: translate(0,100%) rotate(-90deg);
+ transform: translate(0,100%) rotate(-90deg);*/
+ -webkit-transform-origin: 0 0;
+ transform-origin: 0 0;
+}
+
+.header-right {
+  line-height: 0.572em;
+/*  -webkit-transform: translate(-75%,0) rotate(90deg);
+  transform: translate(-75%,0) rotate(90deg);*/
+  -webkit-transform-origin: 1 1;
+  transform-origin: 1 1;
+}
+
+.sub-heading {
+  position: absolute;
+  bottom: 16px;
+  bottom: 1rem;
+  padding: 32px;
+  padding: 2rem;
+  max-width: 600px;
+  z-index: 1;
+  font-size: 56px;
+  font-size: 3.5rem;
+}
+
+
+.menu {
+  position: fixed;
+  -webkit-box-flex: 0;
+  -webkit-flex: none;
+  -ms-flex: none;
+  flex: none;
+  right: 16px;
+  right: 1rem;
+  bottom: 16px;
+  bottom: 1rem;
+  z-index: 1;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+
+}
+
+.menu-nav{
+  padding: 32px;
+  padding: 2rem;
+  text-align: right;
+  font-size: 56px;
+  font-size: 3.5rem;
+}
+.menu-nav-list{
+  list-style: none;
+}
