--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-html {
- 
+a {
+ text-decoration: none;
+ color: white;
 }
 
 body {
@@ -46,10 +47,8 @@ h1{
 .header-name{
   padding: 32px;
   padding: 2rem;
-  display: inline-block;
-
-  width: 96px;
-  width: 6rem;
+  display: flex;
+  flex-direction: column;
 }
 .header-side{
  display: inline-block;
@@ -83,8 +82,8 @@ h1{
   padding: 2rem;
   max-width: 600px;
   z-index: 1;
-  font-size: 56px;
   font-size: 3.5rem;
+  margin: 0px;
 }
 
 
@@ -98,6 +97,7 @@ h1{
   right: 1rem;
   bottom: 16px;
   bottom: 1rem;
+  margin: 0px;
   z-index: 1;
 
 }
@@ -113,3 +113,84 @@ h1{
   margin: 0 auto;
   list-style: none;
 }
+
+
+.trans-circle{
+  min-width: 100px;
+  min-height:100px;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  border-radius: 100px;
+}
+
+
+li > a {
+  position: relative;
+  color: white;
+  text-decoration: none;
+}
+
+li > a:hover {
+  color: white;
+}
+
+li > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+li > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+@media (max-width: 840px){
+.surplus-text {
+ display: none;
+}
+
+}
+
+@media (max-width: 720px){
+.sub-heading {
+ display: none;
+}
+
+.header-inner{
+  display: flex;
+  justify-content: center;
+}
+
+menu{
+  width: calc(100vw - 2rem);
+  display: flex;
+  justify-content: center;
+}
+.menu-nav-list{
+  padding: 0;
+  text-align: center;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
