--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 a {
  text-decoration: none;
- color: white;
+ color: rgb(255, 241, 234);
 }
 
 body {
@@ -8,14 +8,14 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: black;
+  background-color: rgb(5, 5, 5);
 }
 main {
 
   font-family: "museo-sans",sans-serif;
   font-size: 56px;
-  color: white;
-  border: 10px solid white;
+  color: rgb(255, 241, 234);
+  border: 10px solid rgb(255, 241, 234);
   /*top: 16px;*/
   top: 1rem;
   height: calc(100vh - 2rem);
@@ -126,12 +126,12 @@ h1{
 
 li > a {
   position: relative;
-  color: white;
+  color: rgb(255, 241, 234);
   text-decoration: none;
 }
 
 li > a:hover {
-  color: white;
+  color: rgb(255, 241, 234);
 }
 
 li > a:before {
@@ -141,7 +141,7 @@ li > a:before {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: white;
+  background-color: rgb(255, 241, 234);
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -156,31 +156,34 @@ li > a:hover:before {
 }
 
 @media (max-width: 840px){
-.surplus-text {
- display: none;
-}
+  .surplus-text {
+   display: none;
+  }
 
 }
 
 @media (max-width: 720px){
-.sub-heading {
- display: none;
-}
+  .sub-heading {
+    position: relative;
+    margin: 0px;
+    text-align: center;
+    font-size: 1rem;
+  }
 
-.header-inner{
-  display: flex;
-  justify-content: center;
-}
+  .header-inner{
+    display: flex;
+    justify-content: center;
+  }
 
-menu{
-  width: calc(100vw - 2rem);
-  display: flex;
-  justify-content: center;
-}
-.menu-nav-list{
-  padding: 0;
-  text-align: center;
-}
+  menu{
+    width: calc(100vw - 2rem);
+    display: flex;
+    justify-content: center;
+  }
+  .menu-nav-list{
+    padding: 0;
+    text-align: center;
+  }
 }
 
 
