--- a/index.css
+++ b/index.css
@@ -16,7 +16,6 @@ main {
   font-size: 56px;
   color: rgb(255, 241, 234);
   border: 10px solid rgb(255, 241, 234);
-  /*top: 16px;*/
   top: 1rem;
   height: calc(100vh - 2rem);
   width: calc(100vw - 2rem);
@@ -60,16 +59,12 @@ h1{
 
 .header-left{
  line-height: .84em;
-/* -webkit-transform: translate(0,100%) rotate(-90deg);
- transform: translate(0,100%) rotate(-90deg);*/
  -webkit-transform-origin: 0 0;
  transform-origin: 0 0;
 }
 
 .header-right {
   line-height: 0.572em;
-/*  -webkit-transform: translate(-75%,0) rotate(90deg);
-  transform: translate(-75%,0) rotate(90deg);*/
   -webkit-transform-origin: 1 1;
   transform-origin: 1 1;
 }
@@ -168,10 +163,14 @@ li > a:hover:before {
   width: calc(50vw - 2rem);
   max-width: 250px;
 }
+ .surplus-text {
+   color: limegreen;
+  }
 
 @media (max-width: 840px){
   .surplus-text {
    display: none;
+   color: yellow;
   }
 
 }
