--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 a {
  text-decoration: none;
- color: rgb(255, 241, 234);
+ color: rgb(3, 3, 3);
 }
 
 body {
@@ -10,12 +10,22 @@ body {
   align-content: center;
   background-color: rgb(5, 5, 5);
 }
+.app-inner{
+
+ height: calc(100vh - 2rem);
+ background-color: #F0F0F2;
+ background-image: url("/images/background.jpg");
+ background-size: cover;
+ background-repeat: no-repeat;
+ background-position: 50% 30%;
+}
+
 main {
 
   font-family: "museo-sans",sans-serif;
   font-size: 56px;
-  color: rgb(255, 241, 234);
-  border: 10px solid rgb(255, 241, 234);
+  color: rgb(3, 3, 3);
+  border: 10px solid rgb(3, 3, 3);
   top: 1rem;
   height: calc(100vh - 2rem);
   width: calc(100vw - 2rem);
@@ -118,23 +128,14 @@ h1{
 }
 
 
-.trans-circle{
-  min-width: 100px;
-  min-height:100px;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  border-radius: 100px;
-}
-
-
 li > a {
   position: relative;
-  color: rgb(255, 241, 234);
+  color: rgb(3, 3, 3);
   text-decoration: none;
 }
 
 li > a:hover {
-  color: rgb(255, 241, 234);
+  color: rgb(3, 3, 3);
 }
 
 li > a:before {
@@ -144,7 +145,7 @@ li > a:before {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: rgb(255, 241, 234);
+  background-color: rgb(3, 3, 3);
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -182,6 +183,9 @@ li > a:hover:before {
     text-align: center;
     font-size: 1rem;
 
+  }
+  .app-inner {
+    background-position: 0%;
   }
 
   .header-inner{
